Add modules with 4.0, 4.1 and 4.2; added benchmarks

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
     <modules>
         <module>stub-driver</module>
         <module>benchmark</module>
+        <module>benchmark-4.0</module>
+        <module>benchmark-4.2</module>
     </modules>
     <packaging>pom</packaging>
 
