--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0</version>
     <modules>
         <module>stub-driver</module>
-        <module>benchmark</module>
+        <module>benchmark-4.1</module>
         <module>benchmark-4.0</module>
         <module>benchmark-4.2</module>
     </modules>
