Add driver benchmarks. Update hibernate benchmarks

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>benchmark-4.0</module>
         <module>benchmark-4.2</module>
         <module>hibernate-benchmark</module>
+        <module>driver-benchmark</module>
     </modules>
     <packaging>pom</packaging>
 
