--- a/driver-benchmark/pom.xml
+++ b/driver-benchmark/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>hibernate-bechmark</artifactId>
+    <artifactId>driver-benchmark</artifactId>
 
     <dependencies>
         <dependency>
@@ -28,11 +28,6 @@
             <artifactId>stub-driver</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
-            <version>${hibernate.version}</version>
-        </dependency>
     </dependencies>
 
     <properties>
@@ -42,8 +37,6 @@
             JMH version to use with this project.
           -->
         <jmh.version>1.21</jmh.version>
-
-        <hibernate.version>5.4.1.Final</hibernate.version>
 
         <!--
             Java source/target to use for compilation.
@@ -80,24 +73,6 @@
                                 </transformer>
                             </transformers>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.hibernate.orm.tooling</groupId>
-                <artifactId>hibernate-enhance-maven-plugin</artifactId>
-                <version>${hibernate.version}</version>
-                <executions>
-                    <execution>
-                        <configuration>
-                            <failOnError>true</failOnError>
-                            <enableLazyInitialization>true</enableLazyInitialization>
-                            <enableDirtyTracking>true</enableDirtyTracking>
-                            <enableAssociationManagement>true</enableAssociationManagement>
-                        </configuration>
-                        <goals>
-                            <goal>enhance</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
